# GoBackN

./: .gitignore  LICENSE  README.md
gobackn/: .~实验报告.docx  1.cpp  2.cpp  CMakeLists.txt  chui_proto.h  实验报告.docx
gobackn/protocol/: go_back_n.cpp  go_back_n.h  timer.h
gobackn/socket/: socket_udp.cpp  socket_udp.h
